Improved OCR and added Callback Handlers

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,8 @@ MAX_FILE_SIZE_MB=20
 SUPPORTED_FORMATS=jpg,jpeg,png
 DEBUG=false
 
-C
+ASPRISED_URL=https://ocr.asprise.com/api/v1/receipt
+
 
 
 # Censoring Settings
