Improved workflow with conversation handler

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ ASPRISED_URL=https://ocr.asprise.com/api/v1/receipt
 
 # Censoring Settings
 CONFIDENCE_THRESHOLD=0.8
+
+#States
+WAITING_FOR_IMAGE = 1
